# rs-utcp

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  build.rs
.agent/: codemode_security_improvements.md
.github/workflows/: ci.yml  security.yml
benches/: README.md  call_tool_comparison.rs  codemode_execution.rs  protocol_comparison.rs  tool_operations.rs
docs/: SECURITY_IMPROVEMENTS.md
examples/: all_providers.rs  basic_usage.rs  graphql_subscription.rs  load_from_json.rs  mcp_stdio.rs  mcp_stdio_server.py  mcp_stream_example.rs  orchestrator_gemini.rs  providers.json
examples/cli_program/: main.rs
examples/codemode_eval/: main.rs
examples/common/: mod.rs
examples/graphql_server/: main.rs
examples/grpc_server/: main.rs
examples/http_server/: main.rs
examples/http_stream_server/: main.rs
examples/mcp_server/: main.rs
examples/sse_server/: main.rs
examples/tcp_server/: main.rs
examples/udp_server/: main.rs
examples/webrtc_client/: main.rs
examples/webrtc_server/: main.rs
examples/websocket_server/: main.rs
src/: allowed_protocols_tests.rs  call_templates.rs  config.rs  errors.rs  lib.rs  loader.rs  migration.rs  plugin_registration.rs  security.rs  spec.rs
src/auth/: mod.rs
src/grpcpb/: mod.rs  utcp.proto
src/openapi/: mod.rs
src/plugins/: mod.rs
src/plugins/codemode/: mod.rs
src/providers/: mod.rs
src/providers/base/: mod.rs
src/providers/cli/: mod.rs
src/providers/graphql/: mod.rs
src/providers/grpc/: mod.rs
src/providers/http/: mod.rs
src/providers/http_stream/: mod.rs
src/providers/mcp/: mod.rs
src/providers/sse/: mod.rs
src/providers/tcp/: mod.rs
src/providers/text/: mod.rs
src/providers/udp/: mod.rs
src/providers/webrtc/: mod.rs
src/providers/websocket/: mod.rs
src/repository/: in_memory.rs  mod.rs
src/tag/: mod.rs  tag_search.rs
src/tools/: mod.rs
src/transports/: mod.rs  plugin_registration.rs  registry.rs  stream.rs
src/transports/cli/: mod.rs
src/transports/graphql/: mod.rs
src/transports/grpc/: mod.rs
src/transports/http/: mod.rs
src/transports/http_stream/: mod.rs
src/transports/mcp/: mod.rs
src/transports/sse/: mod.rs
src/transports/tcp/: mod.rs
src/transports/text/: mod.rs
src/transports/udp/: mod.rs
src/transports/webrtc/: mod.rs
src/transports/websocket/: mod.rs
tests/: plugin_registration.rs
