[package]
name = "rs-utcp"
version = "0.2.6"
edition = "2021"
description = "Rust implementation of the Universal Tool Calling Protocol (UTCP)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/universal-tool-calling-protocol/rs-utcp"
homepage = "https://github.com/universal-tool-calling-protocol/rs-utcp"
documentation = "https://docs.rs/rs-utcp"
readme = "README.md"
keywords = ["utcp", "tool-calling", "protocol", "ai"]
categories = ["development-tools", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1.0"
once_cell = "1.19"

thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "deflate", "brotli"] }
futures = "0.3"
regex = "1.0"
tokio-tungstenite = "0.21"
pin-project = "1.0"
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"
base64 = "0.21"
bytes = "1"
rhai = { version = "1.18", features = ["serde"] }
eventsource-stream = "0.2"
webrtc = "0.14"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3"
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
prost = "0.12"
tonic = { version = "0.11", features = ["transport", "tls"] }
tokio-stream = { version = "0.1", features = ["net"] }
axum = "0.6"
uuid = { version = "1", features = ["v4"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "tool_operations"
harness = false

[[bench]]
name = "protocol_comparison"
harness = false

[[bench]]
name = "codemode_execution"
harness = false
